src/test/ui/asm/naked-params.stderr
error: patterns not allowed in naked function parameters
  --> $DIR/naked-params.rs:14:5
   |
LL |     mut a: u32,
   |     ^^^^^

error: patterns not allowed in naked function parameters
  --> $DIR/naked-params.rs:16:5
   |
LL |     &b: &i32,
   |     ^^

error: patterns not allowed in naked function parameters
  --> $DIR/naked-params.rs:18:6
   |
LL |     (None | Some(_)): Option<std::ptr::NonNull<u8>>,
   |      ^^^^^^^^^^^^^^

error: patterns not allowed in naked function parameters
  --> $DIR/naked-params.rs:20:5
   |
LL |     P { x, y }: P,
   |     ^^^^^^^^^^

error: use of parameters not allowed inside naked functions
  --> $DIR/naked-params.rs:28:5
   |
LL |     a + 1
   |     ^

error: use of parameters not allowed inside naked functions
  --> $DIR/naked-params.rs:34:31
   |
LL |     asm!("/* {0} */", in(reg) a, options(noreturn));
   |                               ^

error: use of parameters not allowed inside naked functions
  --> $DIR/naked-params.rs:47:11
   |
LL |         *&y
   |           ^

error: aborting due to 7 previous errors

